--- a/learn-brightly/src/App.css
+++ b/learn-brightly/src/App.css
@@ -1,7 +1,14 @@
-#root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body, #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  background-color: white;
   text-align: center;
 }
 
